# cpp-references-benchmark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ToDo.txt  plan.txt
.github/workflows/: ci.yaml
benchmarks/: CMakeLists.txt  buffer_benchmark.cpp  main_benchmark.cpp  pass_by_benchmark.cpp
include/cpp-reference-benchmark/: BigObject.hpp  buffer.hpp  json_utils.hpp  return_ref.hpp  value_vs_ref.hpp
scripts/: plot_benchmarks.py
src/: BigObject.cpp  CMakeLists.txt  buffer.cpp  copy_vs_ref.cpp  json_utils.cpp  return_ref.cpp  value_vs_ref.cpp
tests/: CMakeLists.txt  test_buffer.cpp  test_copy_vs_ref.cpp  test_json_utils.cpp  test_return_ref.cpp  test_value_vs_ref.cpp
